--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
+    "ownerNumber": ["233508968298"],
+    "ownerName": "ᴹᴿ᭄ Timtech ×፝֟͜×",
+    "instagram" : "https://instagram.com/timtech",
     "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "botName": "Virtual kombat ",
+    "footer": "2023 © api.Dev timtech.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
